@@ -1241,4 +1241,150 @@ KEY `time` (`select_time`),
 KEY `Menu_Time` (`menu_id`,`select_time`)
 ) ENGINE=Aria ROW_FORMAT=PAGE DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
+ALTER TABLE `park_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT '0';
+ALTER TABLE `recording_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `recording_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `recording_log_deletion_queue` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `routing_initiated_recordings` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `thirty_days` CHANGE `lead_ID` `lead_ID` INT NOT NULL;
+ALTER TABLE `twoday_recording_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_agent_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_closer_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_xfer_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `user_call_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `user_call_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_function_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_function_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_skip_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_agent_vmm_overrides` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ajax_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_amd_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_amd_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_auto_calls` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_bench_agent_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_call_notes` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_call_notes_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_carrier_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_carrier_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ccc_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ccc_log` CHANGE `remote_lead_id` `remote_lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ccc_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ccc_log_archive` CHANGE `remote_lead_id` `remote_lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_chat_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_closer_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_closer_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_comments` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_cpd_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_dial_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_dial_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_dnccom_filter_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_drop_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_drop_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_email_list` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_email_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_grab_call_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_hopper` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_inbound_callback_queue` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_inbound_callback_queue_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_inbound_survey_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_inbound_survey_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ivr` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_ivr_response` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_lead_call_quota_counts` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_lead_call_quota_counts_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_list` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NOT NULL AUTO_INCREMENT; 
+ALTER TABLE `vicidial_list_alt_phones` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_list_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_list_pins` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_live_agents` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_live_agents` CHANGE `preview_lead_id` `preview_lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_live_agents` CHANGE `external_lead_id` `external_lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_live_chats` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_extended` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_extended_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_noanswer` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_noanswer_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_outbound_ivr_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_outbound_ivr_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_qc_agent_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_recent_ascb_calls` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_recent_ascb_calls_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_recording_access_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_remote_agent_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_rt_monitor_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_rt_monitor_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_sessions_recent` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_sessions_recent_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_sip_action_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_sip_action_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_vdad_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_xfer_log` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_xfer_log_archive` CHANGE `lead_id` `lead_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+
+
+ALTER TABLE `dialable_inventory_snapshots` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `phones` CHANGE `nva_new_list_id` `nva_new_list_id` BIGINT UNSIGNED NULL DEFAULT '995'; 
+ALTER TABLE `twoday_vicidial_closer_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `twoday_vicidial_xfer_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_callbacks_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_campaigns` CHANGE `manual_dial_list_id` `manual_dial_list_id` BIGINT UNSIGNED NULL DEFAULT '998'; 
+ALTER TABLE `vicidial_ccc_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_ccc_log_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_closer_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_closer_log_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_comments` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL; 
+ALTER TABLE `vicidial_custom_leadloader_templates` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_dnccom_filter_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_drop_lists` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_email_accounts` CHANGE `default_list_id` `default_list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_email_accounts` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_hopper` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL; 
+ALTER TABLE `vicidial_inbound_dids` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_inbound_dids` CHANGE `filter_list_id` `filter_list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_inbound_dids` CHANGE `entry_list_id` `entry_list_id` BIGINT UNSIGNED NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_inbound_dids` CHANGE `filter_entry_list_id` `filter_entry_list_id` BIGINT UNSIGNED NULL DEFAULT '0';
+ALTER TABLE `vicidial_inbound_groups` CHANGE `hold_time_option_callback_list_id` `hold_time_option_callback_list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_inbound_groups` CHANGE `wait_time_option_callback_list_id` `wait_time_option_callback_list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_inbound_groups` CHANGE `closing_time_option_callback_list_id` `closing_time_option_callback_list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_lead_call_quota_counts` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_lead_call_quota_counts_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_list` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_list` CHANGE `entry_list_id` `entry_list_id` BIGINT UNSIGNED NOT NULL DEFAULT '0';
+ALTER TABLE `vicidial_list_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_list_log` CHANGE `entry_list_id` `entry_list_id` BIGINT UNSIGNED NOT NULL DEFAULT '0'; 
+ALTER TABLE `vicidial_lists` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL;
+ALTER TABLE `vicidial_lists_custom` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL;
+ALTER TABLE `vicidial_lists_fields` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL DEFAULT '0';
+ALTER TABLE `vicidial_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL;
+ALTER TABLE `vicidial_log_noanswer` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_log_noanswer_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_qc_agent_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NOT NULL; 
+ALTER TABLE `vicidial_recent_ascb_calls` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_recent_ascb_calls_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_user_list_new_lead` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT '999'; 
+ALTER TABLE `vicidial_xfer_log` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+ALTER TABLE `vicidial_xfer_log_archive` CHANGE `list_id` `list_id` BIGINT UNSIGNED NULL DEFAULT NULL; 
+
+ALTER TABLE `system_settings` ADD `show_newdispo` ENUM('0','1') NOT NULL DEFAULT '0';
+ALTER TABLE `vicidial_inbound_groups` ADD `acr_id` BIGINT UNSIGNED NOT NULL DEFAULT '0'; 
+ALTER TABLE `system_settings` ADD `show_archive` TINYINT NOT NULL DEFAULT '0'; 
+
+
+
+
+
+
+
 
