@@ -1011,7 +1011,9 @@
           www/agc/vicidial.php,
           www/vicidial/admin.php.
     * Change some directories.
-      - Update install.pl.
+      - Update: install.pl.
+    * Change all lead_id and list_id to bigint(20):
+      - Update: extras/upgrade_2.14.sql.
     * Change next release to 3.0.1.
 
 2.26.29
